--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ body {
 
 /* Footer */
 .footer {
-  background-color: #1a1a1a; /* Mismo color de fondo */
+  background-color:#191a2f; 
   padding: 20px;
   font-size: 0.9rem;
   color: #888;
