--- a/styles.css
+++ b/styles.css
@@ -8,12 +8,12 @@
 /* Estilos generales */
 body {
   font-family: Arial, sans-serif;
-  background-color: #1a1a1a; /* Fondo oscuro uniforme */
+  background-color: #191a2f; 
   color: #ffffff;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: space-between; /* Para separar header y footer */
+  justify-content: space-between; 
   text-align: center;
 }
 
@@ -30,7 +30,7 @@ body {
 }
 
 .logo {
-  max-width: 100%;
+  max-width: 60%;
   height: auto;
   margin-bottom: 30px;
 }
