--- a/styles.css
+++ b/styles.css
@@ -298,7 +298,7 @@ section {
 
 /* Como trabajamos */
 section#trabajamos {
-  padding: 0px;
+  padding: 0rem 0rem 3rem;
   background-color: var(--azul-corpo);
 }
 
@@ -400,7 +400,7 @@ section#trabajamos {
   display: flex;
   flex-direction: column;
   align-items: start;
-  width: calc(65% + 2rem);
+  width: calc(40% + 2rem);
 }
 
 #formulario form {
@@ -428,11 +428,22 @@ section#trabajamos {
   color: var(--blanco);
 }
 
+#formulario form p:nth-child(3) {
+  margin-top: 1rem;
+}
+
 #formulario form p:last-child {
   margin-top: 1rem;
   display: flex;
-    justify-content: space-between;
+  justify-content: space-between;
 }
+
+#formulario form p label {
+  font-family: 'Sora';
+  font-weight: 300;
+}
+
+
 
 #formulario form p button {
   font-family: 'Sora';
