--- a/styles.css
+++ b/styles.css
@@ -105,19 +105,19 @@ section {
   right: 2rem;
   
   border: 2px solid #25d366;
-  color: #25d366;
   border-radius: 50px;
   text-align: center;
   font-size: 30px;
   z-index: 100;
-  mix-blend-mode: color-dodge;
+  color: var(--blanco-corpo);
+  border: 2px solid var(--blanco-corpo);
+  background-color: #25d366;
+
   transition: .3s;
 }
 @media (hover:hover) {
   .wpp:hover {
-    border: 2px solid var(--blanco-corpo);
-    color: var(--blanco-corpo);
-    background-color: #25d366;
+    background-color: #0e8138;
     mix-blend-mode: normal;
   }
 }
