action pos formulario

--- a/styles.css
+++ b/styles.css
@@ -551,7 +551,7 @@ div.footer .redes a {
   .toast {
     visibility: hidden;
     width: 300px;
-    background-color: #2d88ff;
+    background-color: #5E63D9;
     color: #fff;
     text-align: center;
     border-radius: 8px;
